[package]
name = "imageoverfitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fastrand = "2.0.1"
image = "0.24.7"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
sdl2 = "0.35.2"
serde = { version = "1.0.190", features = ["serde_derive", "rc"] }
